# LUC-SIM

./: .gitignore  CMakeLists.txt  CacheBase.hpp  ConfigManager.cpp  ConfigManager.hpp  CostBenefitAnalyzer.cpp  CostBenefitAnalyzer.hpp  LRUCache.cpp  LRUCache.hpp  Metrics.cpp  Metrics.hpp  README.md  Replica.cpp  Replica.hpp  ReplicaManager.cpp  ReplicaManager.hpp  RequestProcessor.cpp  RequestProcessor.hpp  S3FIFOCache.cpp  S3FIFOCache.hpp  a.out  buckets.txt  compile.sh  config.json  freq_vector.txt  hotspot_cdf.txt  main.cpp  run_cache_simulator.sh  run_cdf_simulations.sh  setup.sh  simulation_stats.txt  sorted_key_freq.txt  sorted_key_freqs.txt  test.json  test.sh  test_cdf  test_cdf.cpp  tmp
traces/alibaba/: download_and_process_traces.sh  parallel_file_processing.cpp
traces/meta_traces_code/: download_and_process_traces.sh  parallel_file_processing.cpp  plot.py
traces/twitter_sim_code/: download_and_process_traces.sh
traces/twitter_sim_code/code/: one_hit_wonder.cpp  parallel_file_processing.cpp  twitter_parellel_processing.cpp
twitter_sim_code/: download_and_process_traces.sh
workload/alibaba/2020/: workload_alibaba_2020_cache_LRU_34_no_rdma_no_cba_access_ratevariable_no_dedup.txt  workload_alibaba_2020_cache_LRU_34_rdma_cba_access_ratevariable_no_dedup.txt  workload_alibaba_2020_cache_LRU_34_rdma_no_cba_access_ratevariable_no_dedup.txt  workload_alibaba_2020_cache_S3FIFO_34_no_rdma_no_cba_access_ratevariable_no_dedup.txt  workload_alibaba_2020_cache_S3FIFO_34_rdma_cba_access_ratevariable_no_dedup.txt  (+1 more)
workload/twitter/: summary.csv  summary_plot.py
(+212 files in other folders)
